# TheDictionary

./: CMakeLists.txt  dictionaryPrint.cpp  fileExistance.cpp  fileExistance.h  fileExtractor.cpp  fileExtractor.h  fileNotFoundException.cpp  getWordType.cpp  main.cpp  searchWord.cpp  searchWord.h  validateDictionary.h  word.h
Data/: dictionary_20.txt
src/: dictionaryPrint.h  fileExtractor.cpp  fileLocation.cpp  fileLocation.h  fileNotFoundException.h  findZ.cpp  findZ.h  getWordType.h  loadDictionary.cpp  loadDictionary.h  main.cpp  updateDictionary.cpp  updateDictionary.h  validateDictionary.cpp
